Remove google site services

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site Info
 title:              "Yeongho Kim"
 description:        "Lessons learned"
-google_verify:      MwNuvjXT2dbjazmB9n6L9uJrkwj8OkMWz9-aXnWydT0  # Put your Google Verification here
-google_analytics:   UA-81640960-1                                # Put your Google Analytics code
+google_verify:      ""  # Put your Google Verification here
+google_analytics:   ""  # Put your Google Analytics code
 
 # Author Info
 author_name:        "Yeongho Kim"
